# gnome-panel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXES.md  QUICKSTART.md  README.md  REORGANIZATION.md  STRUCTURE.md  diagnose.sh  install.sh  meson.build  package.json  save.sh
.github/workflows/: build.yml
noname's panel/: extension.js  metadata.json  prefs.js
noname's panel/resources/schemas/: gschemas.compiled  org.gnome.shell.extensions.nonamesPanel.gschema.xml
noname's panel/src/features/menu/: dateMenuTweaks.js  notificationIndicator.js  quickSettingsTweaks.js
noname's panel/src/features/modal/: dashboard.js  powerMenu.js
noname's panel/src/features/osd/: stylishOSD.js
noname's panel/src/features/panel/: batteryBar.js  workspaceIndicator.js
noname's panel/src/preferences/: pages.js  prefs.js
noname's panel/src/services/: dashWidgets.js  mediaPlayer.js  systemLevels.js
